# final-project-windwise

./: .gitignore  Code_Diagram.drawio  Collaboration.md  README.md  To_remember.md  pyproject.toml
examples/: main.py
src/Wind_Re/: __init__.py
tests/: main.py  tests_wind_RE.py
tests/src/: __init__.py
